@@ -2,6 +2,7 @@ Version 0.2
 ~~~~~~~~~~~
 * Make several classes subclasses of VexInterval to simplify things
 * Compute "Computational load" -- an estimate of the number of numerical operations required.
+* Initial (untested) support for ephemeris-driven targets
 
 Version 0.1
 ~~~~~~~~~~~
